<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.core</groupId>
  <artifactId>core-frmk</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>core-frmk</name>
  <url>http://maven.apache.org</url>

  <modules>
    <module>module-app</module>
    <module>module-data</module>
    <module>module-tests</module>
    <module>module-tools</module>
  </modules>

  <properties>
    <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
    <suiteThreadPoolSize>1</suiteThreadPoolSize>
    <allure.version>2.13.5</allure.version>
    <allure-maven.version>2.10.0</allure-maven.version>
    <aspectj.version>1.9.6</aspectj.version>
    <jackson.version>2.11.3</jackson.version>
    <log4j.version>2.14.0</log4j.version>
    <slf4j.version>1.7.30</slf4j.version>

    <failIfNoTests>false</failIfNoTests>
    <suiteFile>testng.xml</suiteFile>

    <allure.max.title.length>1000</allure.max.title.length>
  </properties>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
          <configuration>
            <!--<source>11</source>
            <target>11</target>-->
            <release>11</release>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>1.6.0</version>
          <configuration>
            <includePluginDependencies>true</includePluginDependencies>
            <skip>true</skip>
            <mainClass>none</mainClass>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven.surefire.plugin.version}</version>

          <configuration>
            <argLine>-Xmx2048m</argLine>
           <!-- <argLine>&#45;&#45;illegal-access=permit</argLine>-->
            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
            <testFailureIgnore>false</testFailureIgnore>
            <forkCount>3</forkCount>
            <reuseForks>true</reuseForks>
            <useSystemClassLoader>false</useSystemClassLoader>
            <argLine>
              -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
            </argLine>

            <systemPropertyVariables>
              <org.uncommons.reportng.escape-output>false</org.uncommons.reportng.escape-output>
              <allure.max.title.length>${allure.max.title.length}</allure.max.title.length>
              <allure.results.directory>${project.basedir}/target/allure-results</allure.results.directory>
              <enable.jdbc>false</enable.jdbc>
            </systemPropertyVariables>

            <properties>
              <property>
                <name>usedefaultlisteners</name>
                <value>false</value>
              </property>
              <property>
                <name>listener</name>

              </property>
              <property>
                <name>suitethreadpoolsize</name>
                <value>${suiteThreadPoolSize}</value>
              </property>
            </properties>
          </configuration>
        </plugin>

        <!--<plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>2.22.0</version>
          <configuration>
            &lt;!&ndash;<argLine>&#45;&#45;illegal-access=permit</argLine>&ndash;&gt;
            <argLine>&#45;&#45;add-opens java.base/java.lang=ALL-UNNAMED</argLine>
          </configuration>
        </plugin>-->

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.0.0</version>
          <configuration>
            <excludeDefaultDirectories>false</excludeDefaultDirectories>
            <outputDirectory>${project.basedir}/allure-report</outputDirectory>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
          <configuration>
            <!--<outputEncoding>UTF-8</outputEncoding>-->
            <outputDirectory>${user.dir}/allure-report</outputDirectory>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>

        <plugin>
          <groupId>org.eclipse.jetty</groupId>
          <artifactId>jetty-maven-plugin</artifactId>
          <version>9.4.1.v20170120</version>
          <configuration>
            <webAppSourceDirectory>${project.build.directory}/site/allure-maven-plugin</webAppSourceDirectory>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-pmd-plugin</artifactId>
          <version>3.7</version>
          <configuration>
            <includeTests>true</includeTests>
            <minimumTokens>100</minimumTokens>
            <linkXRef>true</linkXRef>
            <targetJdk>1.8</targetJdk>
            <rulesets>
              <ruleset>/oce-app/src/main/resources/java/basic.xml</ruleset>
              <ruleset>/oce-app/src/main/resources/java/braces.xml</ruleset>
              <ruleset>/oce-app/src/main/resources/java/empty.xml</ruleset>
              <ruleset>/oce-app/src/main/resources/java/imports.xml</ruleset>
            </rulesets>
            <failOnViolation>false</failOnViolation>
            <verbose>true</verbose>
            <aggregate>true</aggregate>
          </configuration>
          <executions>
            <execution>
              <phase>test</phase>
              <goals>
                <goal>pmd</goal>
                <goal>cpd</goal>
                <goal>cpd-check</goal>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <repositories>
    <repository>
      <id>jcenter</id>
      <name>bintray</name>
      <url>http://jcenter.bintray.com</url>
    </repository>
    <repository>
      <id>projectlombok.org</id>
      <url>http://projectlombok.org/mavenrepo</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>io.qameta.allure</groupId>
      <artifactId>allure-testng</artifactId>
      <version>${allure.version}</version>
    </dependency>
    <dependency>
      <groupId>io.qameta.allure</groupId>
      <artifactId>allure-maven</artifactId>
      <version>${allure-maven.version}</version>
      <exclusions>
        <exclusion>
          <groupId>antlr</groupId>
          <artifactId>antlr</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>io.github.bonigarcia</groupId>
      <artifactId>webdrivermanager</artifactId>
      <version>5.4.1</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>7.7.0</version>
    </dependency>
    <dependency>
      <groupId>org.uncommons</groupId>
      <artifactId>reportng</artifactId>
      <version>1.1.4</version>
      <exclusions>
        <exclusion>
          <groupId>org.testng</groupId>
          <artifactId>testng</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.googlecode.json-simple</groupId>
      <artifactId>json-simple</artifactId>
      <version>1.1.1</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.30</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.19.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>31.1-jre</version>
    </dependency>
    <dependency>
      <groupId>io.github.cdimascio</groupId>
      <artifactId>java-dotenv</artifactId>
      <version>5.2.2</version>
    </dependency>
    <dependency>
      <groupId>org.javassist</groupId>
      <artifactId>javassist</artifactId>
      <version>3.23.1-GA</version>
    </dependency>
    <dependency>
      <groupId>cglib</groupId>
      <artifactId>cglib-nodep</artifactId>
      <version>3.2.7</version>
    </dependency>
    <!--<dependency>
      <groupId>javax.annotation</groupId>
      <artifactId>javax.annotation-api</artifactId>
      <version>1.3.2</version>
    </dependency>
    <dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
      <version>2.4.0-b180725.0427</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jaxb</groupId>
      <artifactId>jaxb-runtime</artifactId>
      <version>2.4.0-b180725.0644</version>
    </dependency>-->
  </dependencies>
</project>
